bookmark logic and buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,27 @@
           <li>
         <a href="/actors">Actors</a>
       </li>
-          <li>
+      <li>
         <a href="/characters">Characters</a>
       </li>
+        <li>
+        <a href="/bookmarks">Bookmarks</a>
+      </li>
+      <% if session.fetch(:user_id) == nil %>
+        <li>
+          <a href="/user_sign_in">Sign in</a>
+        </li>
+        <li>
+          <a href="/user_sign_up">Sign up</a>
+        </li>
+      <% else #signed in %>
+        <li>
+        <a href="/user_sign_out">Sign out</a>
+      </li>
+      <% end %>
     </ul>
+    <p style ="color: green"><%= notice %></p>
+    <p style ="color: red"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
